syntax = "proto3";

package user;

option go_package = "github.com/Abdurahmanit/GroupProject/user-service/proto/user;user";

service UserService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc AdminDeleteUser (AdminDeleteUserRequest) returns (AdminDeleteUserResponse);
  rpc AdminListUsers (AdminListUsersRequest) returns (AdminListUsersResponse);
  rpc AdminSearchUsers (AdminSearchUsersRequest) returns (AdminSearchUsersResponse);
  rpc AdminUpdateUserRole (AdminUpdateUserRoleRequest) returns (AdminUpdateUserRoleResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {
  bool success = 1;
}

message GetProfileRequest {
  string user_id = 1;
}

message GetProfileResponse {
  string username = 1;
  string email = 2;
  string role = 3;
  bool is_email_verified = 4;
  bool is_active = 5;
  string created_at = 6;
  string updated_at = 7;
}

message UpdateProfileRequest {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message UpdateProfileResponse {
  bool success = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

message VerifyEmailRequest {
  string user_id = 1;
}

message VerifyEmailResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message AdminDeleteUserRequest {
  string admin_id = 1;
  string user_id = 2;
}

message AdminDeleteUserResponse {
  bool success = 1;
}

message AdminListUsersRequest {
  string admin_id = 1;
  int64 skip = 2;
  int64 limit = 3;
}

message AdminListUsersResponse {
  repeated User users = 1;
}

message AdminSearchUsersRequest {
  string admin_id = 1;
  string query = 2;
  int64 skip = 3;
  int64 limit = 4;
}

message AdminSearchUsersResponse {
  repeated User users = 1;
}

message AdminUpdateUserRoleRequest {
  string admin_id = 1;
  string user_id = 2;
  string role = 3;
}

message AdminUpdateUserRoleResponse {
  bool success = 1;
}

message User {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  bool is_email_verified = 5;
  bool is_active = 6;
  string created_at = 7;
  string updated_at = 8;
}